content in html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="result"></div>
+        <div class="buttons">
+            <div class="buttonsA">
+                <div>AC</div>
+                <div>+-</div>
+                <div>%</div>
+                <div>÷</div>
+            </div>
+            <div class="buttonsB">
+                <div>7</div>
+                <div>8</div>
+                <div>9</div>
+                <div>X</div>
+            </div>
+            <div class="buttonsC">
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+                <div>-</div>
+            </div>
+            <div class="buttonsD">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>+</div>
+            </div>
+            <div class="buttonsE">
+                <div>0</div>
+                <div>.</div>
+                <div>=</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
