--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="calculation"></div>
         <div class="result"></div>
         <div class="buttons">
             <div class="buttonsA">
