--- a/index.html
+++ b/index.html
@@ -43,5 +43,34 @@
             </div>
         </div>
     </div>
+
+    <!-- alternative 
+    
+        <div class=“container”>
+      <div class=“result”></div>
+      <div class=“buttons”>
+        <button class=“Clear”>AC</button>
+        <button class=“plusminus”>±</button>
+        <button class=“percent”>%</button>
+        <button class=“operator”>÷</button>
+        <button class=“numbers”>7</button>
+        <button class=“numbers”>8</button>
+        <button class=“numbers”>9</button>
+        <button class=“operator”>x</button>
+        <button class=“numbers”>4</button>
+        <button class=“numbers”>5</button>
+        <button class=“numbers”>6</button>
+        <button class=“operator”>-</button>
+        <button class=“numbers”>1</button>
+        <button class=“numbers”>2</button>
+        <button class=“numbers”>3</button>
+        <button class=“operator”>+</button>
+        <button class=“zero”>0</button>
+        <button class=“decimal”>.</button>
+        <button class=“equal”>=</button>
+      </div>
+    </div>
+    
+    -->
 </body>
 </html>
